[package]
name = "lockset_vault_provider_aws"
version = "0.1.1-alpha.2"
edition = "2024"
description = "AWS Secrets Manager based Vault Provider for Lockset Vault"
license = "MIT"

[dependencies]
async-trait = "0.1.89"
aws-credential-types = "1.2.7"
aws-sdk-secretsmanager = "1.89.0"
aws-sdk-sts = "1.87.0"
aws-types = "1.3.8"
lockset_vault_provider = "0.1.1-alpha.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zeroize = { version = "1.7.0", features = ["zeroize_derive", "serde"] }
